Changed the files references to the Piecewise_Polytrope_EOSs tutorial and NRPy+ module.

--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "**Validation Notes:** This module has been validated to exhibit convergence to zero of the Hamiltonian constraint violation at the expected order to the exact solution (see [start-to-finish TOV module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb) for full test). Note that convergence at the surface of the star is lower order due to the sharp drop to zero in $T^{\\mu\\nu}$.\n",
     "\n",
-    "### NRPy+ Source Code for this module: [TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py](../edit/TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py)\n",
+    "### NRPy+ Source Code for this module: [TOV/Polytropic_EOSs.py](../edit/TOV/Polytropic_EOSs.py)\n",
     "\n",
     "[comment]: <> (Introduction: TODO)"
    ]
@@ -57,7 +57,7 @@
     "    1. [Step 9.a](#pcold_plot__neoseq4): *Complete input set, $n_{\\rm eos} = 4$ piecewise polytropic EOS*\n",
     "    1. [Step 9.b](#pcold_plot__neoseq7): *\"Read et al.\" input set, $n_{\\rm eos} = 7$ piecewise polytropic EOS*\n",
     "1. [Step 10](#code_validation): **Code Validation**\n",
-    "    1. [Step 10.a](#code_validation__self): *Against the [TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py](../edit/TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py) NRPy+ module*\n",
+    "    1. [Step 10.a](#code_validation__self): *Against the [TOV/Polytropic_EOSs.py](../edit/TOV/Polytropic_EOSs.py) NRPy+ module*\n",
     "    1. [Step 10.b](#code_validation__read_et_al): *Against [Read et al. (2008)](https://arxiv.org/pdf/0812.2163.pdf)*\n",
     "    1. [Step 10.c](#code_validation__joshua_faber_tov_solver): *Against [Joshua Faber's TOV solver](https://ccrg.rit.edu/~jfaber/BNSID/TOV/tov_solver.C)*\n",
     "        1. [Step 10.c.i](#code_validation__joshua_faber_tov_solver__results): Results from [Joshua Faber's TOV solver](https://ccrg.rit.edu/~jfaber/BNSID/TOV/tov_solver.C)\n",
@@ -84,8 +84,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "nrpy_module_file_path = os.path.join(\"TOV\",\"Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py\")\n",
-    "validation_file_path  = os.path.join(\"TOV\",\"Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\")"
+    "nrpy_module_file_path = os.path.join(\"TOV\",\"Polytropic_EOSs.py\")\n",
+    "validation_file_path  = os.path.join(\"TOV\",\"Polytropic_EOSs_validation.py\")"
    ]
   },
   {
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Writing TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "## useful polytropic quantities.\n",
     "\n",
     "# Full documentation for this module may be found in the NRPy+ tutorial Jupyter notebook:\n",
-    "#  Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb\n",
+    "#  Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb\n",
     "\n",
     "# Step 0: Import needed Python/NRPy+ modules\n",
     "import numpy as np                  # This module is used for math functions\n",
@@ -196,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -397,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -497,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -634,7 +634,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -822,7 +822,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -898,7 +898,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -956,7 +956,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -1058,7 +1058,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -1116,7 +1116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation.py\n"
+      "Appending to TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -1191,7 +1191,7 @@
     }
    ],
    "source": [
-    "import TOV.Implementation_of_Single_and_Piecewise_Polytrope_EOSs_validation as poly_validation\n",
+    "import TOV.Polytropic_EOSs_validation as poly_validation\n",
     "# Number of equation of states\n",
     "neos = 4\n",
     "\n",
@@ -1396,7 +1396,7 @@
     "$$\\label{code_validation}$$\n",
     "\n",
     "We will now begin our validation tests. We will need input parameters to validate our results from this tutorial module against:\n",
-    "1. [Step 10.a](#code_validation__self): The [Polytropic EOSs_Python_Module](../edit/TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py);\n",
+    "1. [Step 10.a](#code_validation__self): The [Polytropic EOSs_Python_Module](../edit/TOV/Polytropic_EOSs.py);\n",
     "2. [Step 10.b](#code_validation__read_et_al): The parameter reference, [Read *et al.* (2008)](https://arxiv.org/pdf/0812.2163.pdf);\n",
     "3. [Step 10.c](#code_validation__joshua_faber_tov_solver): Results from [Joshua Faber's TOV solver](https://ccrg.rit.edu/~jfaber/BNSID/TOV/tov_solver.C);\n",
     "4. [Step 10.d](#code_validation__mass_vs_radius): The neutron star's mass vs radius plots from [Demorest *et al.* (2010)](https://www.nature.com/articles/nature09466) and [Joonas Nättilä's TOV solver](https://github.com/natj/tov/blob/master/mr.pdf)."
@@ -1408,10 +1408,10 @@
    "source": [
     "<a id='code_validation__self'></a>\n",
     "\n",
-    "## Step 10.a: Against the [TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py](../edit/TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py) NRPy+ module. \\[Back to [top](#toc)\\]\n",
+    "## Step 10.a: Against the [TOV/Polytropic_EOSs.py](../edit/TOV/Polytropic_EOSs.py) NRPy+ module. \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation__self}$$\n",
     "\n",
-    "We start by validating the results obtained in this tutorial module with the results obtained from the [TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py](../edit/TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py) NRPy+ module."
+    "We start by validating the results obtained in this tutorial module with the results obtained from the [TOV/Polytropic_EOSs.py](../edit/TOV/Polytropic_EOSs.py) NRPy+ module."
    ]
   },
   {
@@ -1522,7 +1522,7 @@
     "K_poly_tab0 = 6.80110e-09\n",
     "\n",
     "# Set up the EOS \"struct\" (named tuple)\n",
-    "import TOV.Implementation_of_Single_and_Piecewise_Polytrope_EOSs as poly\n",
+    "import TOV.Polytropic_EOSs as poly\n",
     "eos = poly.set_up_EOS_parameters__complete_set_of_input_variables(neos,rho_poly_tab,Gamma_poly_tab,K_poly_tab0)\n",
     "\n",
     "# Function to compute the relative error between a and b\n",
@@ -1902,7 +1902,7 @@
       "MS1 : DONE after 19 iterations!\n",
       "MS1b: DONE after 19 iterations!\n",
       "MPA1: DONE after 22 iterations!\n",
-      "Finished generating plot data. Time elapsed: 217.921558857 seconds.\n"
+      "Finished generating plot data. Time elapsed: 224.631397009 seconds.\n"
      ]
     }
    ],
@@ -2047,7 +2047,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs](Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-TOV-Piecewise_Polytrope_EOSs](Tutorial-TOV-Piecewise_Polytrope_EOSs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -2059,11 +2059,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb to latex\n",
-      "[NbConvertApp] Support files will be in Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs_files/\n",
-      "[NbConvertApp] Making directory Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs_files\n",
-      "[NbConvertApp] Making directory Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs_files\n",
-      "[NbConvertApp] Writing 182851 bytes to Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.tex\n",
+      "[NbConvertApp] Converting notebook Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb to latex\n",
+      "[NbConvertApp] Support files will be in Tutorial-TOV-Piecewise_Polytrope_EOSs_files/\n",
+      "[NbConvertApp] Making directory Tutorial-TOV-Piecewise_Polytrope_EOSs_files\n",
+      "[NbConvertApp] Making directory Tutorial-TOV-Piecewise_Polytrope_EOSs_files\n",
+      "[NbConvertApp] Writing 181153 bytes to Tutorial-TOV-Piecewise_Polytrope_EOSs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -2077,10 +2077,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
