--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -67,7 +67,7 @@
     "import scipy.integrate as si\n",
     "import math\n",
     "import sys\n",
-    "import TOV.Implementation_of_Single_and_Piecewise_Polytrope_EOSs as ppeos"
+    "import TOV.Polytropic_EOSs as ppeos"
    ]
   },
   {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,13 +462,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-TOV.ipynb to latex\n",
-      "[NbConvertApp] Writing 56366 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
+      "[NbConvertApp] Writing 56293 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n"
