--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -134,7 +134,7 @@
     "out_dir  = \"Validation\"\n",
     "cmd.mkdir(out_dir)\n",
     "\n",
-    "import GiRaFFE_HO.GiRaFFE_NRPy_Ccode_library_Stilde_flux as stflux\n",
+    "import GiRaFFE_HO.Stilde_flux as stflux\n",
     "# Let's also add some standard NRPy+ macros here. We can also use IDX3 here\n",
     "# to define and index that we'll keep reusing.\n",
     "Stilde_flux_string_pre = \"\"\"\n",
@@ -150,12 +150,30 @@
     "Stilde_flux_string_post = \"\"\"\n",
     "}\n",
     "\"\"\"\n",
+    "\n",
+    "# We will pass values of the gridfunction on the cell faces into the function. This requires us\n",
+    "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
+    "alpha_face,gammadet_face = gri.register_gridfunctions(\"AUXEVOL\",[\"alpha_face\",\"gammadet_face\"])\n",
+    "gamma_faceDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceDD\",\"sym01\")\n",
+    "gamma_faceUU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceUU\",\"sym01\")\n",
+    "beta_faceU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"beta_faceU\")\n",
+    "\n",
+    "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
+    "# on the right and left faces\n",
+    "Valenciav_rU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_rU\",DIM=3)\n",
+    "B_rU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_rU\",DIM=3)\n",
+    "Valenciav_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_lU\",DIM=3)\n",
+    "B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
+    "\n",
+    "# And the function to which we'll write the output data:\n",
+    "Stilde_fluxD = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_fluxD\",DIM=3)\n",
+    "\n",
     "# And now, we'll write the files\n",
     "DIM = 3\n",
     "for flux_dirn in range(DIM):\n",
     "    out_string_NRPy = Stilde_flux_string_pre.replace(\"GRFFE__S_i__flux\",\"GRFFE__S_\"+str(flux_dirn)+\"__flux\")\n",
     "    # Function call goes here\n",
-    "    stflux.Stilde_fluxD = stflux.calculate_Stilde_flux(flux_dirn,stflux.Stilde_fluxD)\n",
+    "    stflux.calculate_Stilde_flux(flux_dirn,True,alpha_face,gammadet_face,gamma_faceDD,gamma_faceUU,beta_faceU,Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
     "    Stilde_flux_to_print   = [\\\n",
     "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_fluxD0\"),rhs=stflux.Stilde_fluxD[0]),\\\n",
     "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Stilde_fluxD1\"),rhs=stflux.Stilde_fluxD[1]),\\\n",
@@ -425,7 +443,7 @@
     "    printf(\"Valencia 3-velocity (left):  %.4e, %.4e, %.4e\\\\n\\\\n\",auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]);\n",
     "    printf(\"Below are the numbers we care about. These are the Significant Digits of Agreement \\\\n\");\n",
     "    printf(\"between the HLLE fluxes computed by NRPy+ and ETK. Each row represents a flux \\\\n\");\n",
-    "    printf(\"direction; each entry therein corresponds to a component of StildeD. Each pair \\\\n\\\\n\");\n",
+    "    printf(\"direction; each entry therein corresponds to a component of StildeD. Each pair \\\\n\");\n",
     "    printf(\"of outputs should show at least 10 significant digits of agreement. \\\\n\\\\n\");\n",
     "    // Now, we'll run the NRPy+ and ETK functions, once in each flux_dirn.\n",
     "    // We'll compare the output in-between each \n",
@@ -485,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -497,34 +515,7 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "Finished executing in 0.425387144089 seconds.\n",
-      "Finished compilation.\n",
-      "Finished in 0.444015026093 seconds.\n",
-      "\n",
-      "\n",
-      "Now running...\n",
-      "\n",
-      "seed for random number generator = 1571173526; RECORD IF AGREEMENT IS BAD\n",
-      "\n",
-      "Valencia 3-velocity (right): 9.3836e-01, 8.2173e-01, 1.7180e-01\n",
-      "Valencia 3-velocity (left):  9.4729e-01, 4.6427e-01, -6.2766e-02\n",
-      "\n",
-      "Below are the numbers we care about. These are the Significant Digits of Agreement \n",
-      "between the HLLE fluxes computed by NRPy+ and ETK. Each row represents a flux \n",
-      "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
-      "\n",
-      "of outputs should show at least 10 significant digits of agreement. \n",
-      "\n",
-      "SDA: 13.5, 13.5, 14.3\n",
-      "SDA: 13.4, 13.5, 14.4\n",
-      "SDA: 14.1, 14.6, 14.8\n",
-      "Note that in the case of very high velocities, numerical error will accumulate \n",
-      "and reduce agreement significantly due to a catastrophic cancellation. \n",
-      "\n",
-      "Finished in 0.0312600135803 seconds.\n",
-      "\n",
-      "\n"
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n"
      ]
     }
    ],
