Tutorial-ETK_thorn-NRPyPlusTOVID: fix compilation.

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -82,7 +82,7 @@
      "text": [
       "(1210, 1210, 1210, 1210, 1210, 1210)\n",
       "Just generated a TOV star with R_Schw = 2.662450073694224e-01 , M = 8.795916086122126e-02 , M/R_Schw = 3.303692404611947e-01 .\n",
-      "TOV solution generated in: 2.81548810005 s\n"
+      "TOV solution generated in: 5.48681092262 s\n"
      ]
     }
    ],
@@ -170,11 +170,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.copy(os.path.join(\"TOV\",\"tov_interp.h\"),os.path.join(outdir,\"SIMD\"))\n",
+    "shutil.copy(os.path.join(\"TOV\",\"tov_interp.h\"),outdir)\n",
+    "\n",
     "with open(os.path.join(outdir,\"interpolate_TOV_solution_to_point.h\"), \"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "/* Load the TOV_interpolate_1D() function */\n",
-    "#include \"TOV_interp.h\"\n",
+    "#include \"tov_interp.h\"\n",
     "\n",
     "/* This function returns the TOV quantities at point rr\n",
     " * by interpolating the data in the TOV initial data file.\n",
@@ -418,15 +419,15 @@
     "    ADMQuantities_CcodeKernel = fin.FD_outputC(\"returnstring\",ADMQuantities_to_print,\n",
     "                                               params=\"outCverbose=False,includebraces=False,preindent=1\")\n",
     "    file.write(\"\"\"\n",
-    "inline\n",
-    "void ADMQuantities(const CCTK_INT i0,const CCTK_INT i1,const CCTK_INT i2,\n",
+    "static inline\n",
+    "void ADMQuantities(const cGH* restrict const cctkGH, const CCTK_INT i0,const CCTK_INT i1,const CCTK_INT i2,\n",
+    "\n",
+    "                   const CCTK_REAL *restrict xx0GF,const CCTK_REAL *restrict xx1GF,const CCTK_REAL *restrict xx2GF,\n",
     "\n",
     "                   const CCTK_REAL IDalpha, \n",
     "                   const CCTK_REAL IDgammaDD00,const CCTK_REAL IDgammaDD01, const CCTK_REAL IDgammaDD02,\n",
     "                   const CCTK_REAL IDgammaDD11,const CCTK_REAL IDgammaDD12, const CCTK_REAL IDgammaDD22,\n",
-    "                   \n",
-    "                   const CCTK_REAL *restrict xx0GF,const CCTK_REAL *restrict xx1GF,const CCTK_REAL *restrict xx2GF,\n",
-    "                   \n",
+    "                                      \n",
     "                   CCTK_REAL *alphaGF,CCTK_REAL *betaU0GF,CCTK_REAL *betaU1GF,CCTK_REAL *betaU2GF,\n",
     "                   CCTK_REAL *gammaDD00GF, CCTK_REAL *gammaDD01GF, CCTK_REAL *gammaDD02GF, \n",
     "                   CCTK_REAL *gammaDD11GF, CCTK_REAL *gammaDD12GF, CCTK_REAL *gammaDD22GF, \n",
@@ -505,19 +506,19 @@
     "    HydroQuantities_CcodeKernel = fin.FD_outputC(\"returnstring\",HydroQuantities_to_print,\n",
     "                                               params=\"outCverbose=False,includebraces=False,preindent=2\")\n",
     "    file.write(\"\"\"\n",
-    "inline\n",
-    "void HydroQuantities(const CCTK_INT i0,const CCTK_INT i1,const CCTK_INT i2,\n",
+    "static inline \n",
+    "void HydroQuantities(const cGH* restrict const cctkGH, const CCTK_INT i0,const CCTK_INT i1,const CCTK_INT i2,\n",
     "\n",
     "                   const CCTK_REAL IDPressure, const CCTK_REAL IDrho_baryonic, \n",
     "                   const CCTK_REAL IDrho__total_energy_density,\n",
     "                   \n",
     "                   CCTK_REAL *PressureGF,CCTK_REAL *rho_baryonicGF,\n",
-    "                   CCTK_REAL *rho__total_energy_densityGF,\n",
+    "                   CCTK_REAL *epsilonGF,\n",
     "                   CCTK_REAL *Valencia3velocityU0GF,\n",
     "                   CCTK_REAL *Valencia3velocityU1GF,\n",
     "                   CCTK_REAL *Valencia3velocityU2GF) {\n",
-    "    CCTK_DECLARE_PARAMETERS;\n",
-    "    if(rho__total_energy_densityGF <= 0 || rho_baryonicGF <= 0 || PressureGF <= 0) {\n",
+    "    DECLARE_CCTK_PARAMETERS;\n",
+    "    if(IDrho__total_energy_density <= 0 || IDrho_baryonic <= 0 || IDPressure <= 0) {\n",
     "        rho_baryonicGF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)] = rho_atmosphere;\n",
     "        PressureGF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)]     = K_atmosphere*pow(rho_atmosphere,Gamma_atmosphere);\n",
     "        epsilonGF[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)]      = 0;\n",
@@ -559,13 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_code_defn_list = []\n",
-    "def append_to_make_code_defn_list(filename):\n",
-    "    if filename not in make_code_defn_list:\n",
-    "        make_code_defn_list.append(filename)\n",
-    "    return os.path.join(outdir,filename)\n",
-    "\n",
-    "with open(append_to_make_code_defn_list(\"InitialData.c\"), \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"InitialData.c\"), \"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "#include <math.h>\n",
     "#include <stdio.h>\n",
@@ -575,6 +570,18 @@
     "#include \"cctk.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
+    "\n",
+    "// Declare initial data input struct:\n",
+    "//          stores data from initial data solver,\n",
+    "//          so they can be put on the numerical grid.\n",
+    "typedef struct __ID_inputs {\n",
+    "    CCTK_REAL Rbar;\n",
+    "    int Rbar_idx;\n",
+    "    int interp_stencil_size;\n",
+    "    int numlines_in_file;\n",
+    "    CCTK_REAL *r_Schw_arr,*rho_arr,*rho_baryon_arr,*P_arr,*M_arr,*expnu_arr,*exp4phi_arr,*rbar_arr;\n",
+    "} ID_inputs;\n",
+    "\n",
     "\n",
     "#include \"ADMQuantities.h\"\n",
     "#include \"HydroQuantities.h\"\n",
@@ -586,18 +593,6 @@
     "#define vely (&vel[1*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]])\n",
     "#define velz (&vel[2*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]])\n",
     "\n",
-    "// Declare initial data input struct:\n",
-    "//          stores data from initial data solver,\n",
-    "//          so they can be put on the numerical grid.\n",
-    "typedef struct __ID_inputs {\n",
-    "    REAL Rbar;\n",
-    "    int Rbar_idx;\n",
-    "    int interp_stencil_size;\n",
-    "    int numlines_in_file;\n",
-    "    REAL *r_Schw_arr,*rho_arr,*rho_baryon_arr,*P_arr,*M_arr,*expnu_arr,*exp4phi_arr,*rbar_arr;\n",
-    "} ID_inputs;\n",
-    "\n",
-    "\n",
     "void read_TOV_input_data_from_file(ID_inputs TOV_in) {\n",
     "\n",
     "    DECLARE_CCTK_PARAMETERS;\n",
@@ -606,28 +601,28 @@
     "    // Step 1.a: Read TOV initial data from data file\n",
     "    // Open the data file:\n",
     "    char filename[100];\n",
-    "    sprintf(filename,TOV_filename); // TOV_filename is a CCTK_PARAMETER\n",
+    "    sprintf(filename,\"%s\",TOV_filename); // TOV_filename is a CCTK_PARAMETER\n",
     "    FILE *in1Dpolytrope = fopen(filename, \"r\");\n",
     "    if (in1Dpolytrope == NULL) {\n",
-    "        fprintf(stderr,\"ERROR: could not open file %s\\n\",filename);\n",
+    "        fprintf(stderr,\"ERROR: could not open file %s\\\\n\",filename);\n",
     "        exit(1);\n",
     "    }\n",
     "    // Count the number of lines in the data file:\n",
     "    int numlines_in_file = count_num_lines_in_file(in1Dpolytrope);\n",
     "    // Allocate space for all data arrays:\n",
-    "    r_Schw_arr     = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    rho_arr        = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    rho_baryon_arr = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    P_arr          = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    M_arr          = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    expnu_arr      = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    exp4phi_arr    = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    rbar_arr       = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *r_Schw_arr     = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *rho_arr        = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *rho_baryon_arr = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *P_arr          = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *M_arr          = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *expnu_arr      = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *exp4phi_arr    = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
+    "    CCTK_REAL *rbar_arr       = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*numlines_in_file);\n",
     "\n",
     "    // Read from the data file, filling in arrays.\n",
     "    // read_datafile__set_arrays() may be found in TOV/tov_interp.h\n",
     "    if(read_datafile__set_arrays(in1Dpolytrope, r_Schw_arr,rho_arr,rho_baryon_arr,P_arr,M_arr,expnu_arr,exp4phi_arr,rbar_arr) == 1) {\n",
-    "        fprintf(stderr,\"ERROR WHEN READING FILE %s!\\n\",filename);\n",
+    "        fprintf(stderr,\"ERROR WHEN READING FILE %s!\\\\n\",filename);\n",
     "        exit(1);\n",
     "    }\n",
     "    fclose(in1Dpolytrope);\n",
@@ -637,7 +632,7 @@
     "        if(rho_arr[i-1]>0 && rho_arr[i]==0) { Rbar = rbar_arr[i-1]; Rbar_idx = i-1; }\n",
     "    }\n",
     "    if(Rbar<0) {\n",
-    "        fprintf(stderr,\"Error: could not find rbar=Rbar from data file.\\n\");\n",
+    "        fprintf(stderr,\"Error: could not find rbar=Rbar from data file.\\\\n\");\n",
     "        exit(1);\n",
     "    }\n",
     "   \n",
@@ -667,10 +662,10 @@
     "    read_TOV_input_data_from_file(TOV_in);\n",
     "   \n",
     "#pragma omp parallel for\n",
-    "  for(CCTK_INT k=0;k<cctk_lsh[2];k++) for(CCTK_INT j=0;j<cctk_lsh[1];j++) for(CCTK_INT i=0;i<cctk_lsh[0];i++) {\n",
-    "        CCTK_INT idx = CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
+    "  for(CCTK_INT i2=0;i2<cctk_lsh[2];i2++) for(CCTK_INT i1=0;i1<cctk_lsh[1];i1++) for(CCTK_INT i0=0;i0<cctk_lsh[0];i0++) {\n",
+    "        CCTK_INT idx = CCTK_GFINDEX3D(cctkGH,i0,i1,i2);\n",
     "        CCTK_REAL rr = r[idx];\n",
-    "        CCTK_REAL th = acos(z/rr);\n",
+    "        CCTK_REAL th = acos(z[idx]/rr);\n",
     "\n",
     "        CCTK_REAL IDexp_4phi,IDnu,IDPressure,IDrho_baryonic,IDrho__total_energy_density;\n",
     "        interpolate_TOV_solution_to_point(rr, TOV_in, &IDexp_4phi,&IDnu,\n",
@@ -682,11 +677,11 @@
     "\n",
     "        HydroQuantities(cctkGH, i0,i1,i2,\n",
     "                        IDPressure,IDrho_baryonic,IDrho__total_energy_density,\n",
-    "                        p,rho,epsilonGF,velx,vely,velz);\n",
+    "                        press,rho,eps,velx,vely,velz);\n",
     "\n",
     "        ADMQuantities(cctkGH,i0,i1,i2,\n",
     "                      x,y,z,\n",
-    "                      IDalpha, IDalpha,IDgammaDD00,IDgammaDD01,IDgammaDD02,IDgammaDD11,IDgammaDD12,IDgammaDD22,\n",
+    "                      IDalpha,IDgammaDD00,IDgammaDD01,IDgammaDD02,IDgammaDD11,IDgammaDD12,IDgammaDD22,\n",
     "                      alp,betax,betay,betaz,\n",
     "                      gxx,gxy,gxz,gyy,gyz,gzz,\n",
     "                      kxx,kxy,kxz,kyy,kyz,kzz);\n",
@@ -892,7 +887,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing NRPyPlusTOVID/src/make.code.defn\n"
+      "Overwriting NRPyPlusTOVID/src/make.code.defn\n"
      ]
     }
    ],
@@ -924,7 +919,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\n",
-      "[NbConvertApp] Writing 91504 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
+      "[NbConvertApp] Writing 89677 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
