GiRaFFE/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B: Worked on writing convergence test.

--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
@@ -302,9 +302,9 @@
    "outputs": [],
    "source": [
     "out_string += \"\"\"\n",
-    "const REAL xmin = 0.9,xmax=1.1;\n",
-    "const REAL ymin = 0.9,ymax=1.1;\n",
-    "const REAL zmin = 0.9,zmax=1.1;\n",
+    "const REAL xmin = -0.01,xmax=0.01;\n",
+    "const REAL ymin = -0.01,ymax=0.01;\n",
+    "const REAL zmin = -0.01,zmax=0.01;\n",
     "\n",
     "\"\"\""
    ]
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we'll write the main method. First, we'll set up the grid. In thistest, we cannot use only one point. As we are testing a three-point stencil, we can get away with a minimal $3 \\times 3 \\times 3$ grid. Then, we'll write the A fields. After that, we'll calculate the magnetic field two ways."
+    "Now, we'll write the main method. First, we'll set up the grid. In this test, we cannot use only one point. As we are testing a three-point stencil, we can get away with a minimal $3 \\times 3 \\times 3$ grid. Then, we'll write the A fields. After that, we'll calculate the magnetic field two ways."
    ]
   },
   {
@@ -332,18 +332,23 @@
     "    const REAL xxmax[3] = {xmax,ymax,zmax};\n",
     "\n",
     "    REAL dxx[3];\n",
-    "    for(int i=0;i<3;i++) dxx[i] = (xxmax[i] - xxmin[i]) / ((REAL)Nxx[i]);\n",
+    "    for(int i=0;i<3;i++) dxx[i] = (xxmax[i] - xxmin[i]) / ((REAL)Nxx[i]+1.0);\n",
     "    for(int i=0;i<3;i++) printf(\"dxx[%d] = %.15e\\\\n\",i,dxx[i]);\n",
+    "    \n",
+    "    // We'll define our grid slightly different from how we normally would. We let our outermost\n",
+    "    // ghostzones coincide with xxmin and xxmax instead of the interior of the grid. This means\n",
+    "    // that the ghostzone points will have identical positions so we can do convergence tests of them.\n",
     "\n",
     "    // Step 0d.ii: Set up uniform coordinate grids\n",
     "    REAL *xx[3];\n",
     "    for(int i=0;i<3;i++) {\n",
     "        xx[i] = (REAL *)malloc(sizeof(REAL)*Nxx_plus_2NGHOSTS[i]);\n",
     "        for(int j=0;j<Nxx_plus_2NGHOSTS[i];j++) {\n",
-    "            xx[i][j] = xxmin[i] + ((REAL)(j-NGHOSTS) + (1.0/2.0))*dxx[i]; // Cell-centered grid.\n",
+    "            xx[i][j] = xxmin[i] + ((REAL)(j))*dxx[i]; // Face-centered grid.\n",
     "        }\n",
     "    }\n",
-    "\n",
+    "    //for(int i=0;i<Nxx_plus_2NGHOSTS[0];i++) printf(\"xx[0][%d] = %.15e\\\\n\",i,xx[0][i]);\n",
+    "    \n",
     "    // This is the array to which we'll write the NRPy+ variables.\n",
     "    REAL *auxevol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS[2] * Nxx_plus_2NGHOSTS[1] * Nxx_plus_2NGHOSTS[0]);\n",
     "    REAL *evol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS[2] * Nxx_plus_2NGHOSTS[1] * Nxx_plus_2NGHOSTS[0]);\n",
@@ -392,8 +397,105 @@
     "            printf(\"Numeric:  %.16e, %.16e, %.16e\\\\n\\\\n\",auxevol_gfs[IDX4(BU0GF,i0,i1,i2)],auxevol_gfs[IDX4(BU1GF,i0,i1,i2)],auxevol_gfs[IDX4(BU2GF,i0,i1,i2)]);\n",
     "        }\n",
     "    }\n",
+    "    \n",
+    "    // Now, we'll set the cubic coefficients:\n",
+    "    a = (double)(rand()%20-10);\n",
+    "    b = (double)(rand()%20-10);\n",
+    "    c = (double)(rand()%20-10);\n",
+    "    g = (double)(rand()%20-10);\n",
+    "    h = (double)(rand()%20-10);\n",
+    "    l = (double)(rand()%20-10);\n",
+    "    p = (double)(rand()%20-10);\n",
+    "    q = (double)(rand()%20-10);\n",
+    "    r = (double)(rand()%20-10);\n",
+    "    \n",
+    "    // And recalculate on our initial grid:\n",
+    "    calculate_AD(Nxx_plus_2NGHOSTS,xx,evol_gfs);\n",
+    "\n",
+    "    // We'll also calculate the exact solution for B^i\n",
+    "    calculate_exact_BU(Nxx_plus_2NGHOSTS,xx,auxevol_gfs);\n",
+    "    \n",
+    "    // And now for the numerical derivatives:\n",
+    "    driver_A_to_B(Nxx,Nxx_plus_2NGHOSTS,dxx,evol_gfs,auxevol_gfs);\n",
+    "    \n",
+    "    // To do a convergence test, we'll also need a second grid with twice the resolution.\n",
+    "    // We'll need new Nxx and Nxx_plus_2NGHOSTS terms; we'll use the suffix *_o2 to represent the halved grid spacing.\n",
+    "    const int Nxx_o2[3] = {3,3,3};\n",
+    "    const int Nxx_plus_2NGHOSTS_o2[3] = {5,5,5};\n",
+    "    // We set up these grids in a bit of an unusual way so that the points in the ghost zones line up for testing.\n",
+    "\n",
+    "    REAL dxx_o2[3];\n",
+    "    for(int i=0;i<3;i++) dxx_o2[i] = (xxmax[i] - xxmin[i]) / ((REAL)Nxx_o2[i]+1.0);\n",
+    "    for(int i=0;i<3;i++) printf(\"dxx_o2[%d] = %.15e\\\\n\",i,dxx_o2[i]);\n",
+    "\n",
+    "    REAL *xx_o2[3];\n",
+    "    for(int i=0;i<3;i++) {\n",
+    "        xx_o2[i] = (REAL *)malloc(sizeof(REAL)*Nxx_plus_2NGHOSTS_o2[i]);\n",
+    "        for(int j=0;j<Nxx_plus_2NGHOSTS_o2[i];j++) {\n",
+    "            xx_o2[i][j] = xxmin[i] + ((REAL)(j))*dxx_o2[i]; // Face-centered grid.\n",
+    "        }\n",
+    "    }\n",
+    "    //for(int i=0;i<Nxx_plus_2NGHOSTS_o2[0];i++) printf(\"xx_o2[0][%d] = %.15e\\\\n\",i,xx_o2[0][i]);\n",
+    "\n",
+    "    // This is the array to which we'll write the NRPy+ variables.\n",
+    "    REAL *auxevol_o2_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS_o2[2] * Nxx_plus_2NGHOSTS_o2[1] * Nxx_plus_2NGHOSTS_o2[0]);\n",
+    "    REAL *evol_o2_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS_o2[2] * Nxx_plus_2NGHOSTS_o2[1] * Nxx_plus_2NGHOSTS_o2[0]);\n",
+    "    \n",
+    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS_o2[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS_o2[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS_o2[0];i0++) {\n",
+    "        auxevol_o2_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0;\n",
+    "    }\n",
+    "    \n",
+    "    // Now, we'll calculate the fields on the refined grid.\n",
+    "    calculate_AD(Nxx_plus_2NGHOSTS_o2,xx_o2,evol_o2_gfs);\n",
+    "\n",
+    "    // We'll also calculate the exact solution for B^i\n",
+    "    calculate_exact_BU(Nxx_plus_2NGHOSTS_o2,xx_o2,auxevol_o2_gfs);\n",
+    "    \n",
+    "    // And now for the numerical derivatives:\n",
+    "    driver_A_to_B(Nxx_o2,Nxx_plus_2NGHOSTS_o2,dxx_o2,evol_o2_gfs,auxevol_o2_gfs);\n",
+    "    \n",
+    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS_o2[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS_o2[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS_o2[0];i0++) {\n",
+    "        // Are we on an edge/vertex? This algorithm can probably be improved.\n",
+    "        ghost_zone_overlap = 0;\n",
+    "        indices[0] = i0;\n",
+    "        indices[1] = i1;\n",
+    "        indices[2] = i2;\n",
+    "        for(int dim=0;dim<3;dim++) {\n",
+    "            if(indices[dim]%(Nxx_o2[dim]+NGHOSTS)<NGHOSTS) {\n",
+    "                ghost_zone_overlap++;\n",
+    "            }\n",
+    "        }\n",
+    "        if (ghost_zone_overlap < 2) {\n",
+    "            // Don't print if we're on an edge or vertex\n",
+    "            /*printf(\"i0,i1,i2 = %d,%d,%d\\\\n\",i0,i1,i2);\n",
+    "            printf(\"Analytic: %.16e, %.16e, %.16e\\\\n\",auxevol_o2_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]);\n",
+    "            printf(\"Numeric:  %.16e, %.16e, %.16e\\\\n\\\\n\",auxevol_o2_gfs[IDX4(BU0GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(BU1GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(BU2GF,i0,i1,i2)]);*/\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS[0];i0++) {\n",
+    "        // Are we on an edge/vertex? This algorithm can probably be improved.\n",
+    "        ghost_zone_overlap = 0;\n",
+    "        indices[0] = i0;\n",
+    "        indices[1] = i1;\n",
+    "        indices[2] = i2;\n",
+    "        for(int dim=0;dim<3;dim++) {\n",
+    "            if(indices[dim]%(Nxx[dim]+NGHOSTS)<NGHOSTS) {\n",
+    "                ghost_zone_overlap++;\n",
+    "            }\n",
+    "        }\n",
+    "        if (ghost_zone_overlap < 2) {\n",
+    "            // Don't print if we're on an edge or vertex \n",
+    "            /*printf(\"Convergence: %.16e, %.16e, %.16e\\\\n\",\n",
+    "                   log(fabs((auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU0GF,i0,i1,i2)])/(auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_o2_gfs[IDX4(B_ANALYTICU0GF,2*i0,2*i1,2*i2)])))/log(2),\n",
+    "                   log(fabs((auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU1GF,i0,i1,i2)])/(auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_o2_gfs[IDX4(B_ANALYTICU1GF,2*i0,2*i1,2*i2)])))/log(2),\n",
+    "                   log(fabs((auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU2GF,i0,i1,i2)])/(auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_o2_gfs[IDX4(B_ANALYTICU2GF,2*i0,2*i1,2*i2)])))/log(2)\n",
+    "                   );*/\n",
+    "        }\n",
+    "    }\n",
+    "\n",
     "}\n",
-    "\"\"\""
+    "\"\"\"\n"
    ]
   },
   {
@@ -423,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -433,38 +537,41 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.C -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 1.01367211342 seconds.\n",
+      "Finished executing in 1.22334718704 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.02842187881 seconds.\n",
+      "Finished in 1.23518800735 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "dxx[0] = 2.000000000000001e-01\n",
-      "dxx[1] = 2.000000000000001e-01\n",
-      "dxx[2] = 2.000000000000001e-01\n",
-      "Analytic: -8.0000000000000071e-01, 1.5999999999999996e+00, 2.4000000000000000e+01\n",
-      "Numeric:  -8.0000000000000260e-01, 1.6000000000000101e+00, 2.3999999999999996e+01\n",
+      "dxx[0] = 1.000000000000000e-02\n",
+      "dxx[1] = 1.000000000000000e-02\n",
+      "dxx[2] = 1.000000000000000e-02\n",
+      "Analytic: 5.9999999999999998e-02, 8.0000000000000002e-02, 0.0000000000000000e+00\n",
+      "Numeric:  6.0000000000037801e-02, 7.9999999999991189e-02, 0.0000000000000000e+00\n",
       "\n",
-      "Analytic: -2.7999999999999998e+00, 0.0000000000000000e+00, 2.1200000000000003e+01\n",
-      "Numeric:  -2.8000000000000060e+00, 1.7763568394002599e-16, 2.1199999999999989e+01\n",
+      "Analytic: -4.0000000000000001e-02, 0.0000000000000000e+00, -1.4000000000000001e-01\n",
+      "Numeric:  -3.9999999999995595e-02, 0.0000000000000000e+00, -1.4000000000002899e-01\n",
       "\n",
-      "Analytic: -2.0000000000000000e+00, -1.5999999999999996e+00, 2.2000000000000000e+01\n",
-      "Numeric:  -1.9999999999999987e+00, -1.6000000000000101e+00, 2.1999999999999986e+01\n",
+      "Analytic: 0.0000000000000000e+00, -8.0000000000000002e-02, -1.0000000000000001e-01\n",
+      "Numeric:  0.0000000000000000e+00, -7.9999999999991189e-02, -9.9999999999944578e-02\n",
       "\n",
-      "Analytic: -2.0000000000000000e+00, 0.0000000000000000e+00, 2.4000000000000000e+01\n",
-      "Numeric:  -1.9999999999999987e+00, 1.7763568394002599e-16, 2.4000000000000000e+01\n",
+      "Analytic: 0.0000000000000000e+00, 0.0000000000000000e+00, 0.0000000000000000e+00\n",
+      "Numeric:  0.0000000000000000e+00, 0.0000000000000000e+00, 0.0000000000000000e+00\n",
       "\n",
-      "Analytic: -2.0000000000000000e+00, 1.6000000000000014e+00, 2.6000000000000000e+01\n",
-      "Numeric:  -2.0000000000000031e+00, 1.6000000000000105e+00, 2.6000000000000025e+01\n",
+      "Analytic: 0.0000000000000000e+00, 8.0000000000000002e-02, 1.0000000000000001e-01\n",
+      "Numeric:  0.0000000000000000e+00, 7.9999999999991189e-02, 9.9999999999944578e-02\n",
       "\n",
-      "Analytic: -1.1999999999999993e+00, 0.0000000000000000e+00, 2.6800000000000004e+01\n",
-      "Numeric:  -1.1999999999999935e+00, 1.7763568394002599e-16, 2.6800000000000008e+01\n",
+      "Analytic: 4.0000000000000001e-02, 0.0000000000000000e+00, 1.4000000000000001e-01\n",
+      "Numeric:  3.9999999999995595e-02, 0.0000000000000000e+00, 1.4000000000002899e-01\n",
       "\n",
-      "Analytic: -3.2000000000000011e+00, -1.6000000000000014e+00, 2.4000000000000000e+01\n",
-      "Numeric:  -3.1999999999999993e+00, -1.6000000000000052e+00, 2.4000000000000000e+01\n",
+      "Analytic: -5.9999999999999998e-02, -8.0000000000000002e-02, 0.0000000000000000e+00\n",
+      "Numeric:  -6.0000000000037801e-02, -7.9999999999991189e-02, 0.0000000000000000e+00\n",
       "\n",
-      "Finished in 0.0100951194763 seconds.\n",
+      "dxx_o2[0] = 5.000000000000000e-03\n",
+      "dxx_o2[1] = 5.000000000000000e-03\n",
+      "dxx_o2[2] = 5.000000000000000e-03\n",
+      "Finished in 0.0341501235962 seconds.\n",
       "\n",
       "\n"
      ]
