--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -515,7 +515,33 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n"
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
+      "Finished executing in 0.419051170349 seconds.\n",
+      "Finished compilation.\n",
+      "Finished in 0.436154127121 seconds.\n",
+      "\n",
+      "\n",
+      "Now running...\n",
+      "\n",
+      "seed for random number generator = 1571773017; RECORD IF AGREEMENT IS BAD\n",
+      "\n",
+      "Valencia 3-velocity (right): 8.0338e-01, -8.4981e-01, 1.0106e-01\n",
+      "Valencia 3-velocity (left):  -4.6626e-01, 5.5824e-01, -5.0782e-01\n",
+      "\n",
+      "Below are the numbers we care about. These are the Significant Digits of Agreement \n",
+      "between the HLLE fluxes computed by NRPy+ and ETK. Each row represents a flux \n",
+      "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
+      "of outputs should show at least 10 significant digits of agreement. \n",
+      "\n",
+      "SDA: 12.0, 12.0, 13.3\n",
+      "SDA: 16.0, 15.7, 15.8\n",
+      "SDA: 13.3, 13.2, 14.7\n",
+      "Note that in the case of very high velocities, numerical error will accumulate \n",
+      "and reduce agreement significantly due to a catastrophic cancellation. \n",
+      "\n",
+      "Finished in 0.0161719322205 seconds.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
